--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,39 @@
-# Site settings
-title: dSpace Labs LLC
-email: joshua@dspacelabs.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://dspacelabs.com" # the base hostname & protocol for your site
-twitter_username: dSpaceLabs
-github_username:  dSpaceLabs
+permalink: /:year/:month/:day/:title/
 
-# Build settings
-markdown: kramdown
+highlighter: pygments
+#markdown: redcarpet
+#redcarpet:
+#  extensions: [
+#   "no_intra_emphasis"
+#   ,"fenced_code_blocks"
+#   ,"autolink"
+#   ,"tables"
+#   ,"strikethrough"
+#   ,"superscript"
+#   ,"with_toc_data"
+#   ,"footnotes"
+#   ,"highlight"
+#   ,"underline"
+#   ,"quote"
+#   ,"lax_spacing"
+#   ,"prettify"
+##   ,"html_toc"
+#  ]
+
+paginate: 10
+paginate_path: ":num"
+baseurl: ""
+
+title: "dSpace Labs"
+email: "joshua@dspacelabs.com"
+description: "Developer"
+github_username:  "dSpaceLabs"
+#swiftype_searchId: ""
+#disqus_shortname: ""
+
+
+
+url: "http://dspacelabs.com"
+imgrepo: "http://dspacelabs.com/static/img"
+#url: "http://127.0.0.1:4000"
+#imgrepo: "http://127.0.0.1:4000/static/img"
