--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 permalink: /:year/:month/:day/:title/
+exclude: [CNAME, config.rb, Gemfile, Gemfile.lock]
 
 highlighter: pygments
 #markdown: redcarpet
