--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "http://dspacelabs.com"
 date_format: "%b %-d, %Y"
 
 # Google services
-google_analytics:
+google_analytics: UA-51216623-6
 google_verification:
 
 # Optional features
